[project]
name = "different-from-me-should"
version = "0.1.0"
description = "Allowing various subreddits to complete a simple sentence..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "markovify>=0.9.4",
    "pathlib>=1.0.1",
    "praw>=7.8.1",
]
